# ChangeLog for dev-cpp/libassa
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libassa/ChangeLog,v 1.13 2011/07/19 20:33:31 angelos Exp $

  19 Jul 2011; Christoph Mende <angelos@gentoo.org> libassa-3.5.0.ebuild,
  +files/libassa-3.5.0-link-dynamically.patch:
  Add USE=doc to control docs installation and fix insecure rpaths by linking
  dynamically

  20 Mar 2011; Christoph Mende <angelos@gentoo.org> libassa-3.5.0.ebuild:
  Made building of static libraries optional and removed .la files

  19 Feb 2011; <angelos@gentoo.org> libassa-3.5.0.ebuild,
  +files/libassa-3.5.0-ldflags.patch:
  Respect LDFLAGS (bug #335545)

  28 May 2010; Christoph Mende <angelos@gentoo.org> libassa-3.5.0.ebuild,
  +files/libassa-3.5.0-fix-tests.patch:
  Fix tests (bug 299605)

  23 Nov 2009; Markus Meier <maekke@gentoo.org> libassa-3.5.0.ebuild:
  x86 stable, bug #293978

  12 Nov 2009; Christoph Mende <angelos@gentoo.org> libassa-3.5.0.ebuild,
  +files/libassa-3.5.0-dont-run-ldconfig.patch:
  Fix sandbox access violation (bug #291108)

  04 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> libassa-3.5.0.ebuild,
  +files/libassa-3.5.0-gcc44.patch:
  Fix building with GCC 4.4+ wrt #281733.

  14 Apr 2009; Raúl Porcel <armin76@gentoo.org> libassa-3.5.0.ebuild:
  Add ~x86 wrt #265897

  11 Jun 2008; Christoph Mende <angelos@gentoo.org> -libassa-3.4.2.ebuild:
  Remove old

  14 May 2008; Christoph Mende <angelos@gentoo.org> libassa-3.5.0.ebuild:
  Stable on amd64

*libassa-3.5.0 (14 Feb 2008)

  14 Feb 2008; Christoph Mende <angelos@gentoo.org> +libassa-3.5.0.ebuild:
  Version bump

  11 Oct 2007; Christoph Mende <angelos@gentoo.org> libassa-3.4.2.ebuild:
  Stable on amd64

*libassa-3.4.2 (11 Sep 2007)

  11 Sep 2007; Christoph Mende <angelos@gentoo.org> +libassa-3.4.2.ebuild:
  Initial import
