@@ -7,15 +7,15 @@ AUX libassa-3.5.0-gcc44.patch 1093 RMD160 924d77ba42a188ad896dc1b2415f78af7571e8
 AUX libassa-3.5.0-ldflags.patch 393 RMD160 1e0b514396bf615e5bb595c56c06fabd0b453df6 SHA1 897aa7fe09167ed3a895fe2e7fe4c8fed8576492 SHA256 05811739126bbe21841a658135c1d39be19b0cf9548c2bfb7015d69c66dce7d1
 AUX libassa-3.5.0-link-dynamically.patch 436 RMD160 d639e0772b2179b40622561e997d3b7e182bd0b3 SHA1 126c59f1a486ccdd0499cfb85876abe9a41dfafc SHA256 3026161b9bc5828c664f5c8ee95364aef02726ef8746cb9732932c6f0cb76733
 DIST libassa-3.5.0.tar.gz 586237 RMD160 4919157cdf3fd75c42aed571328c0033867aa5eb SHA1 b3813fa952dec3ece621606a919035f308798a7a SHA256 72a627c74e82ff679cb16ebe3a625b9032d8d1feed4c1da63ebb5106a80b1314
+DIST libassa-3.5.1.tar.gz 641255 RMD160 00b361167625ae679a5d999e13fc34a49f402443 SHA1 796202eacd3087312c4458b246160529cbc42c49 SHA256 c1245a98373f37c0e286b327e2d750fd20278c71f47f2018053b4d799d33172c
 EBUILD libassa-3.5.0.ebuild 1116 RMD160 2c21a04f49347e3c2e23373e5d4ec6b9c4796596 SHA1 8149289d802f1e58e9229e5e101ddd79d5ea5268 SHA256 fb837608aef5264125b7298fa3dd364bdf93bc5151915d05ba5551d46d01935e
-MISC ChangeLog 1864 RMD160 84434985158529ac1bbc06eeb1f895bf2390d8e2 SHA1 428e37a93dcb3096be37de37fbcd65321447a0e1 SHA256 29285eac853011b754c83b30f9354341a65e4929be1077b29225a630904d5886
+EBUILD libassa-3.5.1.ebuild 848 RMD160 54d5a38ed414662366ee3fa7108d6a7e2f3dc318 SHA1 3d8a625d399b31f5045badd349767b23168e9bc0 SHA256 02989bc327e45021ba7440a7ba0722edaa5c8f74aaf1e4ae8f0e6aeef2b22846
+MISC ChangeLog 1985 RMD160 e53354e3019973bb7ac3bdae370102e1ee578348 SHA1 0b1dcb83b468758f82c00f678614aea1e46cc059 SHA256 0196379de2f9596d32005063b16fba857246de360196833ac8915f56a8ebedc9
 MISC metadata.xml 236 RMD160 3348c48c2a7c00387c08c41ede421d3d611c29ea SHA1 ae40985ca4378285fc895a7ed548cfd58e053292 SHA256 3d0f545d018f4339358833ccd9c96f191d49a0ec57538a6555b1e8309950ffc4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk59AvgACgkQfXuS5UK5QB1jdAP/RLvvzn0W8yMUsKz+LaS0l6he
-wq2LqmJDGlTaA6fnpDg1zVOIOtXmx3OjK0RhLS1HSpKsHg13OV9BY7OVcjIBYVZm
-xX4sF3Rw/RNujTY8APLcNM4Qwcc2o1Q2caRWlTii5EOeaO/m2JrZCcJJ0F0Ls0D3
-ogd6BTqcNwZCT/Wf+bs=
-=ItUQ
+iF4EAREIAAYFAk/BPMkACgkQmWq1bYTyC0O2TwD/Ryq20xT6mjN6MQSG6lEczahC
+VYtzG8Zaz8hD6UDBWy0BAIc8s2HTVEwry5+PI/hkQMczZVU3hU5lRGdSLaYC2F9m
+=EbSZ
 -----END PGP SIGNATURE-----
